# OpenPixelControlSerial

./: README.md
config/: README.md  config.example.json
discover/: README.md  config.json  discover.py
opc-server-py/: README.md  opc_server.py
opc-server-rs/: BUILD_NOTES.md  Cargo.toml  README.md  test-config.json
opc-server-rs/src/: config.rs  main.rs  opc_server.rs  output.rs  pixel_format.rs
opc-server-rs/src/protocol/: adalight.rs  awa.rs  mod.rs
opc-test/: README.md  test_client.py
validate/: README.md  validate.py
wled-config/: README.md  config.example.json  wled_config.py
