[package]
name = "opc_server"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
ctrlc = "3.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
